Workbench Transparent Film Alpha Bug #65914

Closed
opened 2019-06-18 22:30:28 +02:00 by Atomic · 9 comments

System Information
Operating system: Window 7 SP1
Graphics card: nVidia 660 GTX

Blender Version
version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: 030c7df19d, type: Release
build date: 09/06/2019, 17:18

Short description of error
Alpha of rendered transparent workbench image is wrong.

Exact steps for others to reproduce the error
Open the default scene and look through the camera. Change the render engine to "Workbench" and activate the Transparent flag under the Film rollout.
Render the scene, inspect the pixels and you will discover that the alpha of the pixels of the cube are not entirely solid, as they should be.

**System Information** Operating system: Window 7 SP1 Graphics card: nVidia 660 GTX **Blender Version** version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: 030c7df19da9, type: Release build date: 09/06/2019, 17:18 **Short description of error** Alpha of rendered transparent workbench image is wrong. **Exact steps for others to reproduce the error** Open the default scene and look through the camera. Change the render engine to "Workbench" and activate the Transparent flag under the Film rollout. Render the scene, inspect the pixels and you will discover that the alpha of the pixels of the cube are not entirely solid, as they should be.
Author

Added subscriber: @AtomP

Added subscriber: @AtomP
Jeroen Bakker self-assigned this 2019-06-19 09:39:10 +02:00
Member

Ok, during rendering the AA-buffers are incorrect. Changing AA quality will change the Alpha value to use. Note that Single pass AA and No AA will make the Alpha completely 0.0

Ok, during rendering the AA-buffers are incorrect. Changing AA quality will change the Alpha value to use. Note that Single pass AA and No AA will make the Alpha completely 0.0

Added subscriber: @arcnor

Added subscriber: @arcnor

@Jeroen-Bakker Thanks for looking into this (I was the person that posted about it on Blender Artists).

Unfortunately, with your suggested workaround (and with a more complex scene) I get either a completely transparent scene, or only the outlines if I enable them. (Using Blender 2.8 from yesterday on MacOS).

@Jeroen-Bakker Thanks for looking into this (I was the person that posted about it on Blender Artists). Unfortunately, with your suggested workaround (and with a more complex scene) I get either a completely transparent scene, or only the outlines if I enable them. (Using Blender 2.8 from yesterday on MacOS).

After some testing, the only "workaround" I can find is bumping AA samples to 32, which makes the Alpha 96.5% instead of 87.5% when using 8 samples. Still not really usable, but I'll work like this for now.

After some testing, the only "workaround" I can find is bumping AA samples to 32, which makes the Alpha 96.5% instead of 87.5% when using 8 samples. Still not really usable, but I'll work like this for now.
Member

The work around is to use viewport rendering. This does not have these artifacts. Only final rendering is not working.

I bisecting the issue are found that ede4f31969 initiated the error. Will investigate to find out what works for both cases (hair rendering + transparency)

The work around is to use viewport rendering. This does not have these artifacts. Only final rendering is not working. I bisecting the issue are found that ede4f31969 initiated the error. Will investigate to find out what works for both cases (hair rendering + transparency)

This issue was referenced by ab60fe2a12

This issue was referenced by ab60fe2a12ae5d6a53abf754855be6d63bf1a08c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks @Jeroen-Bakker !

Thanks @Jeroen-Bakker !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65914
No description provided.